SystemUI: Add VPN tile
Adapted to 12 and VpnManager by @eyosen

Author: Danny Baumann <dannybaumann@web.de>
Date:   Wed Jul 3 15:12:22 2019 +0200

    SystemUI: Add VPN tile

    Allows quickly connecting/disconnecting to/from VPNs.

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Wed Oct 7 22:51:51 2020 +0100
Edit    Update to Android 11 APIs

Co-Authored-By: Ali B. <abittin@gmail.com>
Co-Authored-By: George Zacharia <george.zcharia@gmail.com>
Change-Id: Iaa9413bf1071805be8764d92bc5e2dd3131fdaed

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -293,6 +293,10 @@
 
     <uses-permission android:name="android.permission.READ_PEOPLE_DATA" />
 
+    <!-- VPN Tile -->
+    <uses-permission android:name="android.permission.MAINLINE_NETWORK_STACK" />
+    <uses-permission android:name="android.permission.NETWORK_STACK" />
+
     <protected-broadcast android:name="com.android.settingslib.action.REGISTER_SLICE_RECEIVER" />
     <protected-broadcast android:name="com.android.settingslib.action.UNREGISTER_SLICE_RECEIVER" />
     <protected-broadcast android:name="com.android.settings.flashlight.action.FLASHLIGHT_CHANGED" />
