base: Add GamingMode support [SQUASHED]
    * jhonboy121: adapted to A12 and improved code:
    * got rid of removed apps list (why was it there in the first place?)
    * cache gaming regex pattern parsed from resource instead of doing it over and over
    * guard debug logs
    * ditch the useGameDriver method to not force a driver for all.
    * use existing NotificationInterruptSuppressor for disabling heads up or bubbles

    Change-Id: I40ad5f2b037321b761a735a594b099a6fa9914f3
    Signed-off-by: cjybyjk <cjybyjk@zjnu.edu.cn>
    [fryevia] Adapt to our AOSP base and remove HW keys support
    Signed-off-by: David Setiawan <valkry24@gmail.com>
    Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
    Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

    From: cjybyjk <cjybyjk@zjnu.edu.cn>
    Date: Wed, 7 Jul 2021 22:09:33 +0800
    Subject: base: GamingModeHelper: ignore TopAppChanged event if top app is Gaming Mode Core

    Signed-off-by: cjybyjk <cjybyjk@zjnu.edu.cn>
    Change-Id: I77e5d0e2893120ecd606a851037e2bd65746dc38
    Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
    Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

    From: Nauval Rizky <enuma.alrizky@gmail.com>
    Date: Fri, 13 Aug 2021 04:36:09 +0700
    Subject: base: GamingMode: Add option for customizing menu opacity [3/3]

    Signed-off-by: Nauval Rizky <enuma.alrizky@gmail.com>
    Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
    Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

    From: DennySPb <dennyspb@gmail.com>
    Date: Tue, 7 Sep 2021 13:47:07 +0300
    Subject: GamingMode: opt-out performance profile support [1/3]

        * Not all devices have performance profiles.
          Do not mislead users if this is not implemented.
          Maintainers can enable it in device tree via overlay
          if they have implemented performance profiles

    Change-Id: I515453d0c7c6025f67a456124287b8763c7064a8
    Signed-off-by: DennySPb <dennyspb@gmail.com>
    Sign

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -715,6 +715,12 @@
     <!-- Used to get camera status. -->
     <protected-broadcast android:name="android.intent.action.CAMERA_STATUS_CHANGED" />
 
+    <!-- AICP additions -->
+
+    <!-- Gaming Mode -->
+    <protected-broadcast android:name="exthmui.intent.action.GAMING_MODE_ON" />
+    <protected-broadcast android:name="exthmui.intent.action.GAMING_MODE_OFF" />
+
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
